# in-mon-trans-paymentservice

./: .env  .gitignore  Makefile  Readme.md  docker-compose.yml
proto/: payment.proto  payments.proto
scripts/: start.sh
services/connector-rust/: Cargo.toml  Dockerfile  Dockerfile.prod  build.rs
services/connector-rust/src/: main.rs
services/connector-rust/src/pb/: mod.rs
services/connector-rust/src/services/: payment.rs
services/payments-python/: Dockerfile  Dockerfile.prod  requirements.txt
services/payments-python/payments/: main.py
services/payments-python/payments/adapters/: payment_client.py
services/payments-python/payments/pb/: payments_pb2.py  payments_pb2_grpc.py
