[package]
name = "connector"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
prost = "0.12"
prost-types = "0.12"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"
